2006-02-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (PathResolve): Fix typo in _WIN32_WINNT guard.

2006-02-06  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (PRF_VERIFYEXISTS, PRF_TRYPROGRAMEXTENSIONS,
	PRF_FIRSTDIRDEF, PRF_DONTFINDLNK): Define.
	* lib/shell32.def (PathResolve): Define.

2006-02-06  Christopher Faylor  <cgf@timesys.com>

	* include/shlobj.h (PathResolve): Fix typo.

2006-02-06  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shlobj.h (PathResolve): Define.
	(PRF_VERIFYEXISTS, PRF_TRYPROGRAMEXTENSIONS, PRF_FIRSTDIRDEF,
	PRF_DONTFINDLNK): Ditto.
	* lib/shell32.def (PathResolve): Define.

2006-02-04  Ron Lee  <ronl@users.sourceforge.net>

	* include/winnls.h: Remove stray end ';' from preprocessor defines.

2006-02-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/iphlpapi.def: (NotifyAddrChange@8): Define.
	Reported by: Daniel Atallah  <datallah at users dot sf dot net>
	(NotifyRouteChange@8): Define.

2006-01-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winsock2.h (WINSOCK_API_LINKAGE): Define.  Add to
	prototypes.

2006-01-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (FORCEINLINE): Define.

2006-01-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (DECLSPEC_SELECTANY): Define.

2006-01-26  Filip Navara  <xnavara@volny.cz>

	* include/winnt.h (DECLSPEC_ALIGN): Define.

2006-01-24  Danny Smith  <dannysmith@users.sourceforge.net>

        * include/commctrl.h: Correct spelling of 'compatibility' in
	comments.
	* include/setupapi.h: Likewise.
	* include/ws2tcpip.h: Likewise.

2006-01-24  Danny Smith  <dannysmith@users.sourceforge.net>

        * include/ddk/winddk.h (KeGetCurrentKPCR): Support -masm=intel.

2006-01-24  Jiri Malak  <Jiri.Malak@iol.cz>

	WATCOM compatibility changes. 
	* include/ddk/ntddk.h (DECL_IMPORT): Define using __declspec,
	rather than __attribute__.
	(DECL_EXPORT): Likewise.