@@ -2485,8 +2485,11 @@ typedef struct tagNMLVCACHEHINT {
 	NMHDR hdr;
 	int iFrom;
 	int iTo;
-} NMLVCACHEHINT, *PNMLVCACHEHINT;
+} NMLVCACHEHINT, *LPNMLVCACHEHINT;
 #define NM_CACHEHINT NMLVCACHEHINT
+#define PNM_CACHEHINT LPNMLVCACHEHINT
+#define LPNM_CACHEHINT LPNMLVCACHEHINT
+
 typedef struct _TREEITEM *HTREEITEM;
 typedef struct tagTVITEMA {
 	UINT mask;
